<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/round_white_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp">

        <TextView
           
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/select_language"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:clickable="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/baseline_cancel_24"
            android:focusable="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/settings_divider_color" />

    <TextView
       
        android:id="@+id/txtEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/english"
        android:textColor="@color/setting_text_color"
        android:textSize="@dimen/_14sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/settings_divider_color" />

    <TextView
       
        android:id="@+id/txtHindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/hindi"
        android:textColor="@color/setting_text_color"
        android:textSize="@dimen/_14sdp" />


       <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/settings_divider_color" />

    <TextView
       
        android:id="@+id/txtGujarati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/gujarti"
        android:textColor="@color/setting_text_color"
        android:textSize="@dimen/_14sdp" />




</LinearLayout>

