<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/isEmptyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:gravity="center">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_fileName="empty_files.json" />
            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
               
                android:text="@string/there_s_no_status"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:id="@+id/my_recycler_view_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:spanCount="2" />

        <ProgressBar
            android:id="@+id/loader"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/home_btn_txt"/>

        <LinearLayout
            android:id="@+id/sAccessBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/border_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_5sdp"
               
                android:gravity="center"
                android:text="@string/wapp_permission"
                android:textColor="@color/btn_txt"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="@dimen/_135sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/download_bg"
               
                android:gravity="center"
                android:text="@string/allow_storage_access"
                android:textColor="@color/download_btn_text_color"
                android:textSize="@dimen/_12sdp"
                />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
